Sfixan UTF16, napravljen prijevod koji dobro slaže keyeve

--- a/iphone/CATALAN_Localizable.strings
+++ b/iphone/CATALAN_Localizable.strings
@@ -118,7 +118,7 @@
 "Replace Photo" = "Substituir la foto";
 "Delete Photo" = "Esborrar";
 "Congratulations! Your ad has been published." = "Felicitats! Hem publicat el teu anunci";
-"You can go to My OLX to view, edit, or delete the ad at any time." = "Pots veure, modificar, o eliminar el teu anunci en qualsevol moment a "El meu OLX";
+"You can go to My OLX to view, edit, or delete the ad at any time." = "Pots veure, modificar, o eliminar el teu anunci en qualsevol moment a 'El meu OLX'";
 "Share" = "Enviar";
 "View Ad" = "Veure l'anunci";
 "Success" = "Publicar un anunci";
